--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<version>1.0-SNAPSHOT</version>
 
 	<properties>
-        <gamengine.version>1.19</gamengine.version>
+        <gamengine.version>master-SNAPSHOT</gamengine.version>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
